--- a/WebContent/assets/css/design.css
+++ b/WebContent/assets/css/design.css
@@ -1,8 +1,8 @@
 @charset "utf-8";
 @import url('animate.css');
-/* CSS Document */
+/* CSS Document #2cb290--rgb(0,159,232)>*/
 body { font-family: "微軟正黑體",Arial,sans-serif; overflow-x: hidden; background: #ffffff; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }
-.navbar-default { background: #2cb290 url('') no-repeat left top !important; height: 145px; border-style: none; background-image: none; border-radius: 0px; box-shadow: none; position: relative; }
+.navbar-default { background: rgb(0,159,232) url('') no-repeat left top !important; height: 145px; border-style: none; background-image: none; border-radius: 0px; box-shadow: none; position: relative; }
 .navbar { position: relative; min-height: 50px; margin-bottom: 10px; border: 1px solid transparent;}
 .Search .btn-default { text-shadow: 0px 1px 0px #fff; filter: none; filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
 border-color: #FFF; border-color: #ccc; background: #333 url('') no-repeat center center !important; color: #FFF; width: 36px; }
@@ -20,7 +20,7 @@ border-color: #FFF; border-color: #ccc; background: #333 url('') no-repeat cente
 }
 
 @media (max-width: 767px) {
-.navbar-default { background: #2cb290 url('') no-repeat left top !important; height: auto; overflow: hidden; border-bottom-color: #000 }
+.navbar-default { background: rgb(0,159,232) url('') no-repeat left top !important; height: auto; overflow: hidden; border-bottom-color: #000 }
 .navbar-header { height: 75px; }
 .panel-title{margin-top:0;margin-bottom:0;font-size:20px;color:inherit;font-weight:bold;}
 .NAME { font-size: 30px; left: 15%;}
