--- a/WebContent/assets/css/customize.css
+++ b/WebContent/assets/css/customize.css
@@ -26,8 +26,8 @@ a:focus { outline: dotted 1px !important; }
 .aRight { text-align: right; }
 .Logo { position: absolute; left: 25px; top: 10px; }
 .NAME { position: absolute; left: 30%; top: 10px; color:#ffbb77; font-family: Microsoft JhengHei; font-size: 50px; letter-spacing: 40px; font-weight: bold; text-shadow: black 0.1em 0.1em 0.2em;}
-#MENU { width:1170px; background: #ffc578;background: -webkit-linear-gradient(top, #ffc578 0%,#fb9d23 100%);background: -moz-linear-gradient(top, #ffc578 0%, #fb9d23 100%);background: linear-gradient(to bottom, #ffc578 0%,#fb9d23 100%);filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffc578', endColorstr='#fb9d23',GradientType=0 );}
-.menu>ul>li{font-size:30px;}
+#MENU { width:98%; background: #ffc578;background: -webkit-linear-gradient(top, #ffc578 0%,#fb9d23 100%);background: -moz-linear-gradient(top, #ffc578 0%, #fb9d23 100%);background: linear-gradient(to bottom, #ffc578 0%,#fb9d23 100%);filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffc578', endColorstr='#fb9d23',GradientType=0 );}
+.menu>ul>li{font-size:28px;}
 /* site tree close/open control */
 #FatFooter { background: #fce17e url(../images/fatfooter_bg.png) repeat-x left bottom; }
 #FatFooter .FatFooterBtn { font-size: 1em; cursor: pointer; display: inline-block; width: 100px; border: none; background-color: #eee; }
